Tue Dec 16 22:03:54 2008                        Michael Jennings (mej)

Fix compile errors related to the removal of unnecessary typecasting
macros.
----------------------------------------------------------------------
Mon Jan  5 23:50:28 2009                        Michael Jennings (mej)

Remove fontset fallbacks.  I think this might help speed up the load
time slowness some people are seeing.  Let's find out.
----------------------------------------------------------------------
Tue Jan  6 01:03:35 2009                        Michael Jennings (mej)

Prevent blank Escreen buttonbar on startup.
----------------------------------------------------------------------
Tue Jan  6 01:08:47 2009                        Michael Jennings (mej)

Update copyright dates and fix a bad license.
----------------------------------------------------------------------
Sun Oct 25 12:08:16 2009                        Michael Jennings (mej)

Fix some bad replacements.
----------------------------------------------------------------------
Sun Oct 25 12:29:32 2009                        Michael Jennings (mej)

Re-enable SIGPIPE after fork() for child processes who might not
re-enable it on their own.  Pointed out by Sylvain Martin
<sylvain.martin@ulg.ac.be>.
----------------------------------------------------------------------
Sun Oct 25 12:36:01 2009                        Michael Jennings (mej)

Patch for FreeBSD UNIX98 pty support from Ed Schouten <ed@80386.nl>.
----------------------------------------------------------------------
Sun Oct 25 12:39:34 2009                        Michael Jennings (mej)

Fix for scrolling limitations from Cliff Miller <cbm@whatexit.org>.
----------------------------------------------------------------------
Sun Oct 25 13:52:40 2009                        Michael Jennings (mej)

Support font effects in 8 directions.  Patch supplied by Joern
Bernhardt <Joern.Bernhardt@gmx.net>.
----------------------------------------------------------------------