@@ -5622,3 +5622,10 @@ Sun Oct 25 13:52:40 2009                        Michael Jennings (mej)
 Support font effects in 8 directions.  Patch supplied by Joern
 Bernhardt <Joern.Bernhardt@gmx.net>.
 ----------------------------------------------------------------------
+Sun Oct 25 14:02:14 2009                        Michael Jennings (mej)
+
+Revert bad change to borderless code.  We're now doing best effort
+borderless with no override_redirect (which may come back some day as
+a separate option if there's a need) based on advice from raster and
+kwo.
+----------------------------------------------------------------------
